@@ -1,0 +1,1 @@
+DIST libgadu-1.12.0-rc1.tar.gz 651049 SHA256 470292032c2fe33ccef642cfc80179ecfe6a38ea5332545a138d5a8387aaa102 SHA512 ae062333a2fb7208b24d8f11a7a5b80eb11120a714538fefd046ef82aa387ec617439de9b98be3f507cd5c060adb656d57946400c6958fdb99dc1dada9b488aa WHIRLPOOL 124aba6869b1cc8a9cee06ce246e9d821e2f43a371421cd9a7bdff88695d612881a27cc615a5379f27d03407f24d0f3e8e16b1ee85d96f42711e92f40035693d
