@@ -1,5 +1,10 @@
 # ChangeLog for net-libs/libgadu
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+
+*libgadu-1.12.0_rc1 (02 Feb 2014)
+
+  02 Feb 2014; Michał Ziąbkowski <mziab@o2.pl> +libgadu-1.12.0_rc1.ebuild:
+  Bumped.
 
   10 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> libgadu-9999.ebuild:
   Fixed errors from repoman.
